[package]
name = "websocket_client"
version = "0.1.0"
edition = "2021"

[dependencies]
# async
futures-lite = { version =  "2.3.0" }
async-io = "2.3.4"
# logging
log = "0.4.20"
# tls
async-tls = "0.13.0"
# random numbers
rand = "0.8.5"
# base64
base64 = "0.22.1"
# protocol codec
bytes = "1.7.2"
nom = "7.1.3"

[dev-dependencies]
# logging
env_logger = "0.11.5"
# http
http = "1.0.0"
http_client = { git = "https://github.com/brandonros/http_client.git", rev = "52cf9005c87ff069a098af9365dcd7a60e276792" }
