[package]
name = "websocket_client"
version = "0.1.0"
edition = "2021"

[dependencies]
# async
futures-lite = { version =  "2.3.0" }
async-io = "2.3.4"
async-executor = "1.13.0"
# async macros
smol-macros = "0.1.1"
macro_rules_attribute = "0.2.0"
# logging
log = "0.4.20"
# tls
async-tls = "0.13.0"
# random numbers
rand = "0.8.5"
# base64
base64 = "0.22.1"
# protocol codec
bytes = "1.7.2"
nom = "7.1.3"
# errors
anyhow = "1.0.89"

[dev-dependencies]
# logging
env_logger = "0.11.5"
# http
http = "1.0.0"
http_client = { path = "../http_client" }
